--- a/index.html
+++ b/index.html
@@ -3,35 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Analysis Tool</title>
+    <title>Stock Market Analysis Tool</title>
 </head>
 <body>
-    <h1>Stock Analysis Tool</h1>
-    <label for="symbol">Enter Stock Symbol:</label>
-    <input type="text" id="symbol" name="symbol" value="AAPL">
+    <h1>Stock Market Analysis Tool</h1>
+
+    <label for="symbol">Stock Symbol:</label>
+    <input type="text" id="symbol" placeholder="e.g. AAPL">
+    <br>
     <label for="start_date">Start Date:</label>
-    <input type="date" id="start_date" name="start_date" value="2020-01-01">
+    <input type="date" id="start_date">
+    <br>
     <label for="end_date">End Date:</label>
-    <input type="date" id="end_date" name="end_date" value="2022-01-01">
-    <button onclick="fetchData()">Analyze</button>
-    <div id="results"></div>
+    <input type="date" id="end_date">
+    <br>
+    <button onclick="fetchStockData()">Get Data</button>
+
+    <div id="results">
+        <!-- Results will be displayed here -->
+    </div>
 
     <script>
-        function fetchData() {
-            const symbol = document.getElementById("symbol").value;
-            const start_date = document.getElementById("start_date").value;
-            const end_date = document.getElementById("end_date").value;
-
+        function fetchStockData() {
+            const symbol = document.getElementById('symbol').value || 'AAPL';
+            const start_date = document.getElementById('start_date').value || '2020-01-01';
+            const end_date = document.getElementById('end_date').value || '2022-01-01';
+            
             fetch(`/stockdata?symbol=${symbol}&start_date=${start_date}&end_date=${end_date}`)
-            .then(response => response.json())
-            .then(data => {
-                let html = '<h2>Results:</h2><table border="1"><thead><tr><th>Date</th><th>Close</th><th>SMA</th><th>Upper Bollinger Band</th><th>Lower Bollinger Band</th><th>RSI</th></tr></thead><tbody>';
-                for (const [date, metrics] of Object.entries(data)) {
-                    html += `<tr><td>${date}</td><td>${metrics.Close}</td><td>${metrics.SMA}</td><td>${metrics.UpperBB}</td><td>${metrics.LowerBB}</td><td>${metrics.RSI}</td></tr>`;
-                }
-                html += '</tbody></table>';
-                document.getElementById("results").innerHTML = html;
-            });
+                .then(response => response.json())
+                .then(data => {
+                    // For now, let's just display the raw JSON data
+                    document.getElementById('results').innerText = JSON.stringify(data, null, 2);
+                });
         }
     </script>
 </body>
