Update: Bug fix for day formatting and chart destruction

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             time: {
                                 unit: 'day',
                                 displayFormats: {
-                                    day: 'MMM D'
+                                    day: 'MMM d' // Corrected date format
                                 }
                             },
                             title: {
